--- a/cloud-init-microk8s.yaml
+++ b/cloud-init-microk8s.yaml
@@ -33,6 +33,7 @@ final_message: "The system is finally up, after $UPTIME seconds"
 # 3) Now enable metallb add-on, with command 'microk8s enable metallb'
 # 4) While enabling metalldb, it will ask for an IP range. In this example, the IP range would be '172.22.208.91-172.22.208.100'.
 # If you need to edit the address pool for metallb after adding it, use this command: k -n metallb-system edit ipaddresspools.metallb.io/default-addresspool  
+# Source: https://hegdesandesh25.medium.com/deploy-logiq-using-microk8s-cb10ef86deca
 
 # Where are the logs?
 # Cloud-init uses two files to log to:
